# ig_lio

./: CMakeLists.txt  README.md  package.xml
config/: Bpearl.yaml  ouster128.yaml
include/ig_lio/: pointcloud_preprocess.h  pointcloud_preprocessCHesaiFuncional.h
launch/: BPEarl.launch  lio_ouster_128.launch  lio_ouster_128_online.launch
rviz/: lio_show_mine.rviz
src/: ig_lio_node.cpp  pointcloud_preprocess.cpp
